--- a/google-youtube-upload.css
+++ b/google-youtube-upload.css
@@ -1,8 +1,23 @@
 ﻿:host {
-  display: inline-block;
-  position: relative;
+  display: block;
 }
 
-:host google-signin, #files, #upload {
-  float: left;
+#login-logout {
+  margin-bottom: 1em;
+}
+
+#channel-image {
+  width: 2em;
+  height: 2em;
+  vertical-align: middle;
+}
+
+#channel-name {
+  margin-left: 0.2em;
+  margin-right: 0.2em;
+}
+
+#disclaimer {
+  font-size: 0.75em;
+  color: #aeaeae;
 }
